# genie-pdf2md

./: .gitignore  README.md  pyproject.toml
genie_pdf2md/: cli.py  converter.py
