[project]
name = "genie-pdf2md"
version = "0.1.0"
description = "Split PDF pages into images and parse each page to Markdown"
requires-python = ">=3.9"
dependencies = [
    "genie-core[pdf] @ git+https://github.com/Simon99/genie-core.git",
]

[project.scripts]
genie-pdf2md = "genie_pdf2md.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
